--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "sass": "^1.43.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
