--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^2.3.5",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "sass": "^1.43.2",
     "web-vitals": "^1.1.2"
   },
